feat: add links to career page

--- a/index.html
+++ b/index.html
@@ -313,11 +313,32 @@
             </p>
 
             <p>
-                <em>BTW, if you would like to create your own Tech Radar &mdash; we have <a
+                <em>BTW, if you would like to create your own Tech Radar &mdash; check out <a
                         href="https://github.com/zalando/tech-radar">open sourced the code</a> to generate this
                     visualization.</em>
             </p>
 
+            <h3>More about Shelf</h3>
+
+            <p>
+                Check out more details about our tech stack <a href="https://stackshare.io/shelf/shelf" target="_blank"
+                                                               referrerpolicy="no-referrer">on StackShare</a>.
+            </p>
+
+            <p>
+                Check out our 35+ open-source repositories <a href="https://github.com/shelfio" target="_blank"
+                                                              referrerpolicy="no-referrer">on GitHub</a>.
+            </p>
+
+            <p>
+                Interested? Apply to work at Shelf!
+            <ul>
+                <li><a href="https://shelf.io/careers/" target="_blank" referrerpolicy="no-referrer">Careers Page</a>
+                </li>
+                <li><a href="https://boards.greenhouse.io/shelf" target="_blank" referrerpolicy="no-referrer">See our open
+                    positions</a></li>
+            </ul>
+            </p>
         </td>
     </tr>
 </table>
