feat: update quadrant

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         "ring": 0,
         "label": "AWS DynamoDB",
         "active": true,
-        "moved": 1
+        "moved": 0
       },
       {
         "quadrant": 2,
@@ -68,6 +68,13 @@
         "quadrant": 2,
         "ring": 0,
         "label": "Elasticsearch",
+        "active": true,
+        "moved": 0
+      },
+      {
+        "quadrant": 2,
+        "ring": 2,
+        "label": "PostgresQL",
         "active": true,
         "moved": 0
       },
@@ -181,7 +188,7 @@
         "ring": 0,
         "label": "Next.js",
         "active": true,
-        "moved": 1
+        "moved": 0
       },
       {
         "quadrant": 3,
@@ -213,13 +220,6 @@
       },
       {
         "quadrant": 0,
-        "ring": 0,
-        "label": "OpenAPI (Swagger)",
-        "active": true,
-        "moved": 0
-      },
-      {
-        "quadrant": 0,
         "ring": 3,
         "label": "JavaScript",
         "active": true,
@@ -229,6 +229,13 @@
         "quadrant": 0,
         "ring": 0,
         "label": "Python",
+        "active": true,
+        "moved": 0
+      },
+      {
+        "quadrant": 0,
+        "ring": 0,
+        "label": "OpenAPI (Swagger)",
         "active": true,
         "moved": 0
       },
@@ -248,7 +255,7 @@
       },
       {
         "quadrant": 1,
-        "ring": 1,
+        "ring": 0,
         "label": "AWS Kinesis",
         "active": true,
         "moved": 1
