feat: hold for less

--- a/index.html
+++ b/index.html
@@ -287,6 +287,13 @@
                 "label": "Tailwind",
                 "active": false,
                 "moved": 1
+            },
+            {
+                "quadrant": 0,
+                "ring": 3,
+                "label": "Less(css)",
+                "active": false,
+                "moved": -1
             }
         ]
         //ENTRIES
