feat: hold for redux

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             grid: "#bbb",
             inactive: "#ddd"
         },
-        title: "Shelf Tech Radar — 2024.07",
+        title: "Shelf Tech Radar — 2024.10",
         quadrants: [
             {name: "Languages"},
             {name: "Infrastructure"},
@@ -293,6 +293,20 @@
                 "ring": 3,
                 "label": "Less(css)",
                 "active": false,
+                "moved": -1
+            },
+            {
+                "quadrant": 3,
+                "ring": 3,
+                "label": "Froala",
+                "active": true,
+                "moved": -1
+            },
+            {
+                "quadrant": 3,
+                "ring": 3,
+                "label": "Redux",
+                "active": true,
                 "moved": -1
             }
         ]
