feat: add more tools

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             {name: "Languages"},
             {name: "Infrastructure"},
             {name: "Datastores"},
-            {name: "Frameworks"},
+            {name: "Frameworks & Libraries"}
         ],
         rings: [
             {name: "ADOPT", color: "#93c47d"},
@@ -306,6 +306,41 @@
                 "quadrant": 3,
                 "ring": 3,
                 "label": "Redux",
+                "active": true,
+                "moved": -1
+            },
+            {
+                "quadrant": 3,
+                "ring": 0,
+                "label": "testing-library",
+                "active": true,
+                "moved": 0
+            },
+            {
+                "quadrant": 3,
+                "ring": 3,
+                "label": "react-scripts",
+                "active": false,
+                "moved": -1
+            },
+            {
+                "quadrant": 3,
+                "ring": 0,
+                "label": "jest",
+                "active": true,
+                "moved": 0
+            },
+            {
+                "quadrant": 3,
+                "ring": 3,
+                "label": "lodash",
+                "active": true,
+                "moved": -1
+            },
+            {
+                "quadrant": 1,
+                "ring": 0,
+                "label": "Yarn classic",
                 "active": true,
                 "moved": -1
             }
