--- a/tech-stack.html
+++ b/tech-stack.html
@@ -424,16 +424,7 @@
             visibility: visible;
         }
 
-        .tool-card:first-child .tooltip,
-        .tool-card:nth-child(2) .tooltip {
-            left: 0;
-            transform: translateX(0);
-        }
 
-        .tool-card:first-child .tooltip::after,
-        .tool-card:nth-child(2) .tooltip::after {
-            left: 20%;
-        }
 
         .tool-card:last-child .tooltip,
         .tool-card:nth-last-child(2) .tooltip {
@@ -449,73 +440,216 @@
 
         @media (max-width: 768px) {
             .header-content {
-                flex-direction: column;
-                text-align: center;
-                gap: 15px;
+                padding: 0 15px;
             }
 
-            .company-info {
-                grid-template-columns: 1fr;
-                text-align: center;
-                gap: 20px;
+            .header-text h1 {
+                font-size: 24px;
             }
 
-            .company-meta {
-                justify-content: center;
-            }
-
-            .stats {
-                text-align: center;
-            }
-
-            .tools-grid {
-                grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
-                gap: 15px;
-            }
-
-            .category-header {
-                flex-direction: column;
-                text-align: center;
-            }
-
-            .tooltip {
-                width: 280px;
-                max-width: calc(100vw - 40px);
-                left: 50vw !important;
-                right: auto !important;
-                transform: translateX(-50%) !important;
-            }
-
-            .tooltip::after {
-                left: 50% !important;
-                transform: translateX(-50%);
-            }
-        }
-
-        @media (max-width: 480px) {
             .main-container {
                 padding: 20px 15px;
             }
 
             .category-section {
-                padding: 25px 20px;
+                padding: 20px 15px;
+                margin-bottom: 20px;
+            }
+
+            .category-header {
+                padding: 15px 10px;
+                margin: -15px -10px 15px -10px;
+                flex-wrap: wrap;
+                gap: 10px;
+            }
+
+            .category-title {
+                font-size: 20px;
+                flex: 1;
+                min-width: 200px;
+            }
+
+            .category-description {
+                font-size: 14px;
+                margin-bottom: 20px;
+                word-wrap: break-word;
+                overflow-wrap: break-word;
             }
 
             .tools-grid {
-                grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+                grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
+                gap: 12px;
+            }
+
+            .tool-card {
+                padding: 15px 10px;
+            }
+
+            .tool-name {
+                font-size: 14px;
+                word-wrap: break-word;
+                overflow-wrap: break-word;
+                hyphens: auto;
+            }
+
+            .tooltip {
+                width: 280px;
+                max-width: calc(100vw - 40px);
+                font-size: 12px;
+            }
+
+            .tool-card:nth-child(3n+1) .tooltip {
+                left: 0 !important;
+                right: auto !important;
+                transform: translateX(0) !important;
+            }
+
+            .tool-card:nth-child(3n+1) .tooltip::after {
+                left: 20% !important;
+                transform: translateX(0);
+            }
+
+            .tool-card:nth-child(3n+2) .tooltip {
+                left: 50% !important;
+                right: auto !important;
+                transform: translateX(-50%) !important;
+            }
+
+            .tool-card:nth-child(3n+2) .tooltip::after {
+                left: 50% !important;
+                transform: translateX(-50%);
+            }
+
+            .tool-card:nth-child(3n+3) .tooltip,
+            .tool-card:nth-child(3n+4) .tooltip {
+                left: auto !important;
+                right: 0 !important;
+                transform: translateX(0) !important;
+            }
+
+            .tool-card:nth-child(3n+3) .tooltip::after {
+                left: 80% !important;
+                transform: translateX(0);
+            }
+
+            .tool-card:nth-child(3n+3) .tooltip,
+            .tool-card:nth-child(3n+4) .tooltip {
+                left: auto !important;
+                right: 0 !important;
+                transform: translateX(0) !important;
+            }
+
+            .tool-card:nth-child(3n+3) .tooltip::after,
+            .tool-card:nth-child(3n+4) .tooltip::after {
+                left: 80% !important;
+                transform: translateX(0);
+            }
+        }
+
+        @media (max-width: 480px) {
+            .header-content {
+                padding: 0 10px;
+            }
+
+            .header-text h1 {
+                font-size: 20px;
+            }
+
+            .header-text p {
+                font-size: 13px;
+            }
+
+            .main-container {
+                padding: 15px 10px;
+            }
+
+            .category-section {
+                padding: 15px 10px;
+                margin-bottom: 15px;
+            }
+
+            .category-header {
+                padding: 10px 5px;
+                margin: -10px -5px 15px -5px;
+            }
+
+            .category-title {
+                font-size: 18px;
+                min-width: auto;
+            }
+
+            .category-description {
+                font-size: 13px;
+                margin-bottom: 15px;
+                line-height: 1.5;
+            }
+
+            .tools-grid {
+                grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
+                gap: 10px;
+            }
+
+            .tool-card {
+                padding: 12px 8px;
+            }
+
+            .tool-icon {
+                width: 24px;
+                height: 24px;
+                margin-bottom: 10px;
+            }
+
+            .icon-placeholder {
+                width: 24px;
+                height: 24px;
+                margin-bottom: 10px;
+            }
+
+            .tool-name {
+                font-size: 12px;
+                line-height: 1.3;
             }
 
             .tooltip {
                 width: 250px;
                 max-width: calc(100vw - 30px);
-                left: 50vw !important;
+                font-size: 11px;
+                padding: 8px 12px;
+            }
+
+            .tool-card:nth-child(3n+1) .tooltip {
+                left: 0 !important;
+                right: auto !important;
+                transform: translateX(0) !important;
+            }
+
+            .tool-card:nth-child(3n+1) .tooltip::after {
+                left: 20% !important;
+                transform: translateX(0);
+            }
+
+            .tool-card:nth-child(3n+2) .tooltip {
+                left: 50% !important;
                 right: auto !important;
                 transform: translateX(-50%) !important;
             }
 
-            .tooltip::after {
+            .tool-card:nth-child(3n+2) .tooltip::after {
                 left: 50% !important;
                 transform: translateX(-50%);
+            }
+
+            .tool-card:nth-child(3n+3) .tooltip,
+            .tool-card:nth-child(3n+4) .tooltip {
+                left: auto !important;
+                right: 0 !important;
+                transform: translateX(0) !important;
+            }
+
+            .tool-card:nth-child(3n+3) .tooltip::after,
+            .tool-card:nth-child(3n+4) .tooltip::after {
+                left: 80% !important;
+                transform: translateX(0);
             }
         }
     </style>
