feat: create AAA - AI, Agents, Automation category

--- a/tech-stack.html
+++ b/tech-stack.html
@@ -41,35 +41,42 @@
                         { "name": "Radix UI", "icon": "https://www.google.com/s2/favicons?domain=radix-ui.com&sz=128", "usage": "Low-level UI primitives and components for building high-quality design systems and web apps" },
                     ]
                 },
+                "AAA - AI, Agents, Automation": {
+                    "icon": "🤖",
+                    "description": "Intelligent AI agents and assistants that enhance productivity and accelerate software development workflows.",
+                    "tools": [
+                        { "name": "Claude Code", "icon": "https://www.google.com/s2/favicons?domain=claude.ai&sz=128", "usage": "AI coding assistant for writing, debugging, and refactoring code with advanced reasoning capabilities" },
+                        { "name": "GitHub Copilot", "icon": "https://www.google.com/s2/favicons?domain=github.com&sz=128", "usage": "AI pair programmer that suggests code and entire functions" },
+                        { "name": "TypingMind", "icon": "https://www.google.com/s2/favicons?domain=typingmind.com&sz=128", "usage": "AI company workspace with custom agents, plugins, and unified chat interface for all major LLMs" },
+                        { "name": "n8n", "icon": "https://www.google.com/s2/favicons?domain=n8n.io&sz=128", "usage": "Workflow automation tool for connecting apps and services with custom integrations" },
+                        { "name": "Azure OpenAI", "icon": "https://www.google.com/s2/favicons?domain=openai.com&sz=128", "usage": "AI research and deployment company providing advanced AI models and APIs" },
+                        { "name": "LangChain", "icon": "https://www.google.com/s2/favicons?domain=langchain.com&sz=128", "usage": "Framework for developing applications powered by language models" },
+                    ]
+                },
                 "Utilities": {
                     "icon": "🔧",
                     "description": "Third-party services and specialized tools that enhance development capabilities and provide additional functionality.",
                     "tools": [
-                        { "name": "Claude", "icon": "https://www.google.com/s2/favicons?domain=claude.ai&sz=128", "usage": "AI assistant for conversations, analysis, and content creation" },
-                        { "name": "TypingMind", "icon": "https://www.google.com/s2/favicons?domain=typingmind.com&sz=128", "usage": "Enhanced UI client for ChatGPT and other AI models with advanced features and customization options" },
-                        { "name": "Elasticsearch", "icon": "https://www.google.com/s2/favicons?domain=elastic.co&sz=128", "usage": "Distributed search and analytics engine for full-text search and real-time analytics" },
-                        { "name": "Stripe", "icon": "https://www.google.com/s2/favicons?domain=stripe.com&sz=128", "usage": "Payment processing platform for online businesses" },
                         { "name": "Amazon Route 53", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Scalable domain name system (DNS) web service" },
                         { "name": "Amazon SES", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Email sending service for transactional and marketing emails" },
+                        { "name": "Amazon SNS", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Notification service for sending messages to subscribers via multiple protocols" },
+                        { "name": "Amazon API Gateway", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Managed service for creating, publishing, and managing APIs at scale" },
+                        { "name": "AWS IAM", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Identity and access management service for securely controlling access to AWS services" },
+                        { "name": "Amazon Kinesis", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Platform for real-time data streaming and analytics" },
+                        { "name": "Amazon SageMaker", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Machine learning platform for building, training, and deploying ML models" },
+                        { "name": "Elasticsearch", "icon": "https://www.google.com/s2/favicons?domain=elastic.co&sz=128", "usage": "Distributed search and analytics engine for full-text search and real-time analytics" },
+                        { "name": "Stripe", "icon": "https://www.google.com/s2/favicons?domain=stripe.com&sz=128", "usage": "Payment processing platform for online businesses" },
                         { "name": "Mixpanel", "icon": "https://www.google.com/s2/favicons?domain=mixpanel.com&sz=128", "usage": "Product analytics platform for tracking user interactions and behavior" },
                         { "name": "Hotjar", "icon": "https://www.google.com/s2/favicons?domain=hotjar.com&sz=128", "usage": "User behavior analytics platform for understanding how users interact with websites through heatmaps and recordings" },
                         { "name": "PyTorch", "icon": "https://www.google.com/s2/favicons?domain=pytorch.org&sz=128", "usage": "Open source machine learning library for Python based on Torch" },
-                        { "name": "Amazon API Gateway", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Managed service for creating, publishing, and managing APIs at scale" },
-                        { "name": "Amazon SNS", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Notification service for sending messages to subscribers via multiple protocols" },
                         { "name": "Auth0", "icon": "https://www.google.com/s2/favicons?domain=auth0.com&sz=128", "usage": "Identity platform for application authentication and authorization" },
-                        { "name": "AWS IAM", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Identity and access management service for securely controlling access to AWS services" },
-                        { "name": "Amazon Kinesis", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Platform for real-time data streaming and analytics" },
-                        { "name": "OpenAI", "icon": "https://www.google.com/s2/favicons?domain=openai.com&sz=128", "usage": "AI research and deployment company providing advanced AI models and APIs" },
-                        { "name": "LangChain", "icon": "https://www.google.com/s2/favicons?domain=langchain.com&sz=128", "usage": "Framework for developing applications powered by language models" },
                         { "name": "Streamlit", "icon": "https://www.google.com/s2/favicons?domain=streamlit.io&sz=128", "usage": "Open-source framework for creating data science and machine learning web apps" },
-                        { "name": "Amazon SageMaker", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Machine learning platform for building, training, and deploying ML models" },
                         { "name": "OpenAPI Specification", "icon": "https://www.google.com/s2/favicons?domain=swagger.io&sz=128", "usage": "Specification for describing REST APIs with standardized documentation" },
                         { "name": "AWS Step Functions", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Serverless orchestration service for coordinating distributed applications" },
                         { "name": "AWS Key Management Service", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Managed service for creating and controlling encryption keys" },
                         { "name": "Amazon Kinesis Firehose", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Data delivery service for loading streaming data into AWS data stores" },
                         { "name": "SpaCy", "icon": "https://www.google.com/s2/favicons?domain=spacy.io&sz=128", "usage": "Industrial-strength natural language processing library for Python" },
                         { "name": "Gitbook", "icon": "https://www.google.com/s2/favicons?domain=gitbook.com&sz=128", "usage": "Documentation platform for creating and sharing knowledge bases" },
-                        { "name": "GitHub Copilot", "icon": "https://www.google.com/s2/favicons?domain=github.com&sz=128", "usage": "AI pair programmer that suggests code and entire functions" },
 
                         { "name": "Transformers", "icon": "https://www.google.com/s2/favicons?domain=huggingface.co&sz=128", "usage": "State-of-the-art machine learning library for natural language processing" },
                         { "name": "Amazon QuickSight", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Business intelligence service for creating interactive dashboards and visualizations" },
@@ -136,7 +143,6 @@
                         { "name": "1Password", "icon": "https://www.google.com/s2/favicons?domain=1password.com&sz=128", "usage": "Password manager for securing and managing login credentials" },
                         { "name": "drawio", "icon": "https://www.google.com/s2/favicons?domain=diagrams.net&sz=128", "usage": "Diagramming tool for creating flowcharts, wireframes, and technical diagrams" },
                         { "name": "DocuSign", "icon": "https://www.google.com/s2/favicons?domain=docusign.com&sz=128", "usage": "Electronic signature platform for secure document signing and workflow automation" },
-                        { "name": "n8n", "icon": "https://www.google.com/s2/favicons?domain=n8n.io&sz=128", "usage": "Workflow automation tool for connecting apps and services with custom integrations" },
                         { "name": "Productboard", "icon": "https://www.google.com/s2/favicons?domain=productboard.com&sz=128", "usage": "Product management platform for prioritizing features and roadmap planning" },
                         { "name": "Whimsical Wireframes", "icon": "https://www.google.com/s2/favicons?domain=whimsical.com&sz=128", "usage": "Visual workspace for creating wireframes, flowcharts, and mind maps" },
                         { "name": "Excalidraw", "icon": "https://www.google.com/s2/favicons?domain=excalidraw.com&sz=128", "usage": "Virtual whiteboard for sketching hand-drawn diagrams and collaborative brainstorming" }
