feat: add databases

--- a/tech-stack.html
+++ b/tech-stack.html
@@ -11,17 +11,15 @@
             techStack: {
                 "Application and Data": {
                     "icon": "🖥️",
-                    "description": "Core infrastructure components including databases, caching systems, and application hosting platforms that power our services.",
+                    "description": "Core infrastructure components including caching systems, application hosting platforms, and development frameworks that power our services.",
                     "tools": [
                         { "name": "React", "icon": "https://www.google.com/s2/favicons?domain=react.dev&sz=128", "usage": "JavaScript library for building user interfaces with component-based architecture" },
                         { "name": "Node.js", "icon": "https://www.google.com/s2/favicons?domain=nodejs.org&sz=128", "usage": "JavaScript runtime built on Chrome's V8 JavaScript engine for server-side development" },
                         { "name": "TypeScript", "icon": "https://www.google.com/s2/favicons?domain=typescriptlang.org&sz=128", "usage": "Strongly typed programming language that builds on JavaScript with static type definitions" },
-                        { "name": "MongoDB", "icon": "https://www.google.com/s2/favicons?domain=mongodb.com&sz=128", "usage": "NoSQL document database designed for modern application development and cloud computing" },
                         { "name": "Amazon S3", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Object storage service for data backup, archival, and analytics" },
                         { "name": "AWS Lambda", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Serverless computing service that runs code without provisioning or managing servers" },
                         { "name": "Amazon CloudFront", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Content delivery network (CDN) service for fast, secure content delivery" },
                         { "name": "Next.js", "icon": "https://www.google.com/s2/favicons?domain=nextjs.org&sz=128", "usage": "React framework for production with features like server-side rendering and static site generation" },
-                        { "name": "Amazon DynamoDB", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "NoSQL database service for applications that need consistent, single-digit millisecond latency" },
                         { "name": "Tailwind CSS", "icon": "https://www.google.com/s2/favicons?domain=tailwindcss.com&sz=128", "usage": "Utility-first CSS framework for rapidly building custom user interfaces with low-level utility classes" },
                         { "name": "Styled Components", "icon": "https://www.google.com/s2/favicons?domain=styled-components.com&sz=128", "usage": "CSS-in-JS library for styling React components with tagged template literals and theming support" },
                         { "name": "Microsoft Azure", "icon": "https://www.google.com/s2/favicons?domain=azure.microsoft.com&sz=128", "usage": "Cloud computing platform and infrastructure service" },
@@ -29,8 +27,6 @@
                         { "name": "Amazon VPC", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Virtual private cloud for launching AWS resources in a logically isolated virtual network" },
                         { "name": "Serverless", "icon": "https://www.google.com/s2/favicons?domain=serverless.com&sz=128", "usage": "Framework for building applications with serverless architectures on AWS Lambda" },
                         { "name": "Highcharts", "icon": "https://www.google.com/s2/favicons?domain=highcharts.com&sz=128", "usage": "JavaScript charting library for adding interactive charts to web applications" },
-                        { "name": "MongoDB Atlas", "icon": "https://www.google.com/s2/favicons?domain=mongodb.com&sz=128", "usage": "Cloud-based MongoDB database service with automated scaling and management" },
-                        { "name": "Amazon Aurora", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "MySQL and PostgreSQL-compatible relational database built for the cloud" },
                         { "name": "DataGrip", "icon": "https://www.google.com/s2/favicons?domain=jetbrains.com&sz=128", "usage": "Database IDE for managing and querying databases with advanced SQL support" },
                         { "name": "React Storybook", "icon": "https://www.google.com/s2/favicons?domain=storybook.js.org&sz=128", "usage": "Tool for building UI components and pages in isolation for development and testing" },
                         { "name": "AWS Glue", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Serverless data integration service for discovering, preparing, and combining data" },
@@ -39,6 +35,18 @@
                         { "name": "SWR", "icon": "https://www.google.com/s2/favicons?domain=swr.vercel.app&sz=128", "usage": "React hooks library for data fetching with caching, revalidation, and error handling" },
                         { "name": "Vercel", "icon": "https://www.google.com/s2/favicons?domain=vercel.com&sz=128", "usage": "Cloud platform for static sites and serverless functions with Git integration and automatic deployments" },
                         { "name": "Radix UI", "icon": "https://www.google.com/s2/favicons?domain=radix-ui.com&sz=128", "usage": "Low-level UI primitives and components for building high-quality design systems and web apps" },
+                    ]
+                },
+                "Databases, Data Warehouse, Data Storage": {
+                    "icon": "🗄️",
+                    "description": "Database systems, data warehouses, and data storage solutions for scalable, reliable data management and analytics.",
+                    "tools": [
+                        { "name": "MongoDB", "icon": "https://www.google.com/s2/favicons?domain=mongodb.com&sz=128", "usage": "NoSQL document database designed for modern application development and cloud computing" },
+                        { "name": "Amazon DynamoDB", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "NoSQL database service for applications that need consistent, single-digit millisecond latency" },
+                        { "name": "AWS Aurora PostgreSQL", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "MySQL and PostgreSQL-compatible relational database built for the cloud" },
+                        { "name": "Elasticsearch", "icon": "https://www.google.com/s2/favicons?domain=elastic.co&sz=128", "usage": "Distributed search and analytics engine for full-text search and real-time analytics" },
+                        { "name": "Snowflake", "icon": "https://www.google.com/s2/favicons?domain=snowflake.com&sz=128", "usage": "Cloud-based data warehouse platform for scalable data storage, processing, and analytics" },
+                        { "name": "Databricks", "icon": "https://www.google.com/s2/favicons?domain=databricks.com&sz=128", "usage": "Unified analytics platform for big data processing, machine learning, and collaborative data science" },
                     ]
                 },
                 "AAA - AI, Agents, Automation": {
@@ -64,7 +72,6 @@
                         { "name": "AWS IAM", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Identity and access management service for securely controlling access to AWS services" },
                         { "name": "Amazon Kinesis", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Platform for real-time data streaming and analytics" },
                         { "name": "Amazon SageMaker", "icon": "https://www.google.com/s2/favicons?domain=aws.amazon.com&sz=128", "usage": "Machine learning platform for building, training, and deploying ML models" },
-                        { "name": "Elasticsearch", "icon": "https://www.google.com/s2/favicons?domain=elastic.co&sz=128", "usage": "Distributed search and analytics engine for full-text search and real-time analytics" },
                         { "name": "Stripe", "icon": "https://www.google.com/s2/favicons?domain=stripe.com&sz=128", "usage": "Payment processing platform for online businesses" },
                         { "name": "Mixpanel", "icon": "https://www.google.com/s2/favicons?domain=mixpanel.com&sz=128", "usage": "Product analytics platform for tracking user interactions and behavior" },
                         { "name": "Hotjar", "icon": "https://www.google.com/s2/favicons?domain=hotjar.com&sz=128", "usage": "User behavior analytics platform for understanding how users interact with websites through heatmaps and recordings" },
